# python-openai-samples

./: .gitignore  LICENSE  README.md  hello_gpt.py  historico.json  log.json  pyproject.toml
chats/: earth_explorer.json  earth_explorer.md  earth_explorer.txt  space_specialist.json
gpt_helper/: __init__.py  __main__.py  api.py  chatbot.py  client.py  http_client.py  ingestor.py  logger.py  rag_bot.py
scripts/: ask_docs.py  index_sample.py  mem_chat.py  named_chat.py  streaming.py  test_concorrencia.py
tests/: test_client.py  test_http_client.py
