[project]
name = "hello-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "rafael.orofino",email = "rafael.orofino@avanade.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "openai (>=1.98.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "typer[all] (>=0.16.0,<0.17.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "chromadb (>=1.0.15,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

